# Intelligent-Multi-Camera-Person-Tracking-Video-Search-System

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ai-model-test.yml  cd-production.yml  cd-staging.yml  ci.yml
apps/ai-service/: Dockerfile  requirements.txt
apps/analytics-service/: Dockerfile  pyproject.toml
apps/analytics-service/src/: main.py
apps/analytics-service/src/application/use_cases/: process_tracking_event.py
apps/analytics-service/src/infrastructure/messaging/: kafka_consumer.py
apps/analytics-service/src/infrastructure/persistence/: database.py  models.py  sqlalchemy_person_repo.py  sqlalchemy_tracking_repo.py
apps/analytics-service/src/presentation/api/v1/: tracking_routes.py
apps/analytics-service/tests/: test_domain.py
apps/auth-service/: Dockerfile
apps/camera-service/: Dockerfile  pyproject.toml
apps/camera-service/src/: main.py
apps/camera-service/src/api/: camera_routes.py
apps/camera-service/src/config/: settings.py
apps/camera-service/src/infrastructure/persistence/: database.py
apps/camera-service/src/models/: camera.py
apps/camera-service/src/services/: camera_service.py  health_checker.py
apps/camera-service/tests/: test_camera_validation.py  test_cameras.py
apps/gateway/: Dockerfile
apps/notification-service/: Dockerfile
apps/scheduler-service/: Dockerfile
apps/search-service/: Dockerfile  pyproject.toml
apps/search-service/src/: main.py
apps/search-service/src/api/: search_routes.py
apps/search-service/src/config/: settings.py
apps/search-service/src/services/: search_service.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
database/postgres/: schema.sql
database/qdrant/: init_collections.py
database/redis/: redis.conf
design-system/intelligent-mcpt/: MASTER.md
design-system/intelligent-mcpt-video-search-system/: MASTER.md
docs/: PLAN-database-layer.md  PLAN-scheduler-service.md  ai-pipeline-plan.md  implementation-plan.md  project-structure.md  system-architecture-overview.md
docs/decisions/: 004-triton-vs-nvinfer.md
infrastructure/nginx/: nginx.conf
log/: Backend_Production_Audit_Log.md  Frontend_Audit_Log.md
models/configs/: yolo_labels.txt
models/scripts/: benchmark_models.py  export_reid.py  export_yolov8.py
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
(+153 files in other folders)
