[project]
name = "search-service"
version = "1.0.0"
description = "Microservice interfacing with Qdrant vector database to perform person similarity searches"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0"
]

[tool.poetry]
name = "search-service"
version = "1.0.0"
description = ""
authors = ["Dung Vu <dungvu@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
qdrant-client = "^1.12.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
